# livraria-modelo_2022

./: .env  .env.sample  .env_sample  .gitignore  db.sqlite3  livraria.json  pyproject.toml  render.yaml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_usuario_cpf_alter_usuario_telefone.py  0002_compra.py  0002_initial.py  0003_autor.py  0003_itenscompra.py  0004_livro.py  0004_rename_isbn_livro_isbn_livro_autores.py  0005_livro_capa.py  0006_remove_livro_isbn_alter_autor_email_and_more.py  0007_alter_categoria_options.py  0008_usuario_foto.py
core/models/: __init__.py  categoria.py  compra.py  editora.py  livro.py  usuario.py
core/serializers/: __init__.py  autor.py  categoria.py  compra.py  livro.py  usuario.py
core/views/: __init__.py  compra.py  editora.py  livro.py
livraria/: asgi.py  settings.py  urls.py  wsgi.py
media/migrations/: 0001_initial.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  forms.py  models.py  serializers.py  views.py
usuario/migrations/: 0001_initial.py
