[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["Marco André Mendes <marcoandre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
djangorestframework-simplejwt = "^5.2.0"
python-magic = "^0.4.27"
Pillow = "^9.2.0"
drf-spectacular = "^0.24.0"
django-environ = "^0.9.0"
libmagic = "^1.0"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
isort = "^5.10.1"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

[project]
name = "livraria"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco André Mendes", email = "marcoandre@gmail.com"},
]
dependencies = [
    "Django<5.0,>=3.2",
    "djangorestframework<4.0.0,>=3.13.1",
    "django-cors-headers<4.0.0,>=3.13.0",
    "gunicorn>=20.1.0",
    "whitenoise[brotli]>=6.4.0",
    "djangorestframework-simplejwt<6.0.0,>=5.2.0",
    "python-magic<1.0.0,>=0.4.27",
    "Pillow<10.0.0,>=9.2.0",
    "drf-spectacular<1.0.0,>=0.24.0",
    "django-environ<1.0.0,>=0.9.0",
    "libmagic<2.0,>=1.0",
]
requires-python = ">=3.8,<4.0"
license = {text = "MIT"}

[project.group.dev.dependencies]
isort = "^5.10.1"
